Actions hashcode review